samples/_failures_safe/1761255676_68986d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d554572.c: In function ‘main’:
./samples/SAFE/__tmp_7d554572.c:143:12: error: missing terminating " character
  143 |     printf("Log Analyzer
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_7d554572.c:143:5: error: expected expression at end of input
  143 |     printf("Log Analyzer
      |     ^~~~~~
./samples/SAFE/__tmp_7d554572.c:143:5: error: expected declaration or statement at end of input
